fix java source formatting